--- a/detail-proyek1.html
+++ b/detail-proyek1.html
@@ -13,7 +13,7 @@
     <!-- Navbar -->
     <nav class="navbar">
       <div class="nav-container">
-        <div class="logo">Antrian RS Sehat Sejahtera Berbasis Website</div>
+        <div class="logo">Project 1</div>
         <ul class="nav-links">
           <li><a href="index.html#home">Home</a></li>
           <li><a href="index.html#about">Tentang</a></li>
@@ -21,6 +21,9 @@
           <li><a href="index.html#certifications">Sertifikat</a></li>
           <li><a href="index.html#projects">Projects</a></li>
           <li><a href="index.html#contact">Kontak</a></li>
+          <a href="dokumen/CV.pdf" download="CV_Muhammad_Fazli_Adrianto" class="cta-button">
+  <span>Download CV</span> <span>📄</span>
+</a>
         </ul>
         <div class="mobile-menu">☰</div>
       </div>
